--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,21048],[[4,5,6,0,[],[1,12,8980],[],[[7,0,0,[],[1,445,2129],[]],[8,0,0,[],[1,2575,5839],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,8992,12054],[],[[12,0,0,[],[1,9350,11134],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,45340],[[4,5,6,0,[],[1,24,11622],[],[[7,0,0,[],[1,791,2130],[]],[8,0,0,[],[1,2922,8121],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,11647,12543],[],[[12,0,0,[],[1,12327,11300],[]]],[],[1,1,0,0]],[13,14,15,0,[],[1,24191,21148],[],[[12,0,0,[],[1,24807,19969],[]]],[],[1,1,0,0]]],[],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/hagemish/Documents/OhTu/webcounter/src/tests","*src/tests","*Increment","*/home/hagemish/Documents/OhTu/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*/home/hagemish/Documents/OhTu/webcounter/src/tests/reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/hagemish/Documents/OhTu/webcounter/src/tests","*src/tests","*Increment","*/home/hagemish/Documents/OhTu/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*/home/hagemish/Documents/OhTu/webcounter/src/tests/reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero","*Set","*/home/hagemish/Documents/OhTu/webcounter/src/tests/set.robot","*src/tests/set.robot"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:09","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:42","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:45","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":4,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0},{"elapsed":"00:00:21","fail":0,"id":"s1-s3","label":"Tests.Set","name":"Set","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1762774889861;
+window.output["baseMillis"] = 1762799590667;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 21052;
+window.output["generated"] = 45354;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
